Messed up gruntfile, removed and fixed button and spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,47 +1,31 @@
-*{
-  color: black;
-  padding: 0;
-  margin: 0 auto;
-  background-color: white;
-}
-#wrapper {
-  width: 100%;
-  height: 100%;
-}
 
 .hidden {
   display: none;
 }
 
+#spacer {
+  display: none;
+  width: 100px;
+  height: 50px;
+}
+
 #start {
-  position: relative;
-  margin: 0 auto;
   width: 100px;
   height: 50px;
 }
 
-#hidden {
+.center-block {
   margin: 0 auto;
-  width: 100px;
-  height: 50px;
-}
-
-
-#content {
-  width: 100%;
-  margin: 0px auto;
 }
 
 #player {
   color: black;
   font-size: 2em;
-  text-align: center;
 }
 
 #gameboard {
   width:600px;
   height:600px;
-  margin: 0px auto;
 }
 
 .square {
